Add linkedin button

--- a/index.html
+++ b/index.html
@@ -75,8 +75,9 @@
         <p>Currículum Vitae</p>
         <img src="Carlos_Alberto_Fau_CV_1.png" alt="Vista previa del CV" class="preview" />
         <div class="links">
-            <a href="Carlos_Alberto_Fau_CV.html" target="_blank">Ver versión HTML</a>
-            <a href="Carlos_Alberto_Fau_CV.pdf" target="_blank">Descargar PDF</a>
+            <a href="Carlos_Alberto_Fau_CV.html" target="_blank">HTML Version</a>
+            <a href="Carlos_Alberto_Fau_CV.pdf" target="_blank">PDF Version</a>
+            <a href="https://linkedin.com/in/cafau" target="_blank">Linded In</a>
         </div>
     </main>
     <footer>
