--- a/Carlos_Alberto_Fau_CV.html
+++ b/Carlos_Alberto_Fau_CV.html
@@ -48,90 +48,56 @@
         <li>GitHub: <a href="https://github.com/totemcaf">totemcaf</a></li>
         </ul>
         <h1>Summary</h1>
-        <p><strong>Experienced Software Engineer and Technical Leader</strong> with 20+ years of delivering impactful solutions across fintech, e-commerce, and gaming industries.</p>
+        <p>Experienced Software Engineer and Technical Leader with 20+ years of delivering impactful solutions across fintech, e-commerce, and gaming industries.</p>
         <p>Proven ability to lead architecture modernization, migrate legacy systems, and scale platforms using microservices, event-driven systems, and cloud-native infrastructure.</p>
-        <p>• Staff Engineer at Xepelin: spearheaded decoupling of critical business logic from monoliths, improving system agility and enabling rapid product onboarding.</p>
-        <p>• Tech Lead at AltScore: designed and launched lending platform microservices, while coaching teams in OOD, TDD, and Clean Architecture.</p>
-        <p>• Platform architect at multiple organizations: successfully reduced infrastructure costs and improved resilience through Kubernetes, CI/CD, and DevOps practices.</p>
-        <p>• Technical mentor and educator: experience in coaching engineers, leading teams, and teaching university-level Software Engineering.</p>
-        <p>Strong expertise in Go, Kotlin, TypeScript, and architectures based on DDD, CQRS, Event Sourcing, with hands-on deployments in AWS, GCP, Kubernetes environments.</p>
         <h1>Experience</h1>
         <h2>Xepelin, Staff Engineer</h2>
         <ul>
         <li>July 2024 – June 2025</li>
-        <li>Led the decoupling of critical business logic from a legacy monolith, enabling the transition toward a domain-driven microservices architecture.</li>
-        <li>Implemented the onboarding flow for a new product, improving the client acquisition process and reducing integration friction.</li>
+        <li>Led a team to the decouple a core microservice from a legacy monolith.</li>
+        <li>Improving the client acquisition process and reducing integration friction.</li>
         <li>Improved existing services to streamline onboarding, enhance maintainability, and support product scalability.</li>
-        <li>Delivered internal technical talks on microservices architecture to align teams and promote best engineering practices across the organization.</li>
-        <li>Key technologies: TypeScript, SQL, Temporal, Kubernetes, AWS, Git</li>
         </ul>
         <h2>AltScore, Engineering Lead</h2>
         <ul>
         <li>May 2022 – May 2024</li>
-        <li>Modernized deployment infrastructure by implementing Kubernetes and CI/CD pipelines, improving reliability and release frequency.</li>
-        <li>Designed and developed core microservices for the lending platform, directly supporting customer-facing financial services.</li>
-        <li>Mentored engineers in Object-Oriented Design, TDD, Clean Code, and Domain-Driven Design to improve code quality and team autonomy.</li>
-        <li>Key technologies: Go, MongoDB, Kubernetes, GCE, Git</li>
+        <li>Designed and developed core microservices for the lending platform, directly supporting customer-facing financial services. on a new deployment infrastructure based on Kubernetes and CI/CD pipelines.</li>
         </ul>
         <h2>SimTLiX (now intive), Technology Consultant</h2>
         <ul>
         <li>Oct 2021 – May 2022</li>
-        <li>Clarified the problem space using domain modeling techniques and guided technical decision-making around blockchain platform selection and architecture.</li>
-        <li>Simplified technical complexity by applying Clean Code and Clean Architecture principles to design and implementation workflows.</li>
-        <li>Elevated team effectiveness by coaching developers in practical Agile, Scrum, and collaborative engineering practices.</li>
-        <li>Key technologies: Blockchain (Ethereum, Avalanche, Algorand), TypeScript, Java, Microservices, Kubernetes</li>
+        <li>Participated in a team doing maintenance of a blockchain platform.</li>
         </ul>
         <h2>Coderhouse, VP of Engineering</h2>
         <ul>
         <li>Mar 2021 – Oct 2021</li>
-        <li>Improved system robustness and reliability by introducing modern software engineering practices and updating the core technology stack.</li>
-        <li>Established a quality-driven development culture through the adoption of structured testing, code reviews, and CI/CD practices.</li>
-        <li>Led the migration from a monolithic architecture to a domain-oriented microservices ecosystem, enabling better scalability and team autonomy.</li>
+        <li>Led a small team to improve the platform, reducing response time from several tens of seconds to hundred milliseconds.</li>
         </ul>
-        <h2>Etermax, Principal &amp; Senior Principal Software Engineer</h2>
+        <h2>Etermax, Principal Software Engineer</h2>
         <ul>
         <li>July 2019 – Feb 2021</li>
-        <li>Led the migration of critical services to Kubernetes, improving scalability and deployment consistency across environments.</li>
         <li>Developed a reusable microservice template using Kotlin, KTor, and Arrow to accelerate development and enforce architectural consistency.</li>
-        <li>Improved mobile app performance and reliability in Word Crack 2 by introducing new architecture guidelines and optimizing vocabulary processing algorithms.</li>
+        <li>Optimized response time (10x) and memory usage (100x) of the vocabulary searching module</li>
         <li>Designed and implemented a bot player service to enhance user engagement through intelligent automated gameplay.</li>
-        <li>Key technologies: Kotlin, Go, KTor, Arrow, Unity, C#, Kubernetes, AWS, Scrum</li>
         </ul>
         <h2>Frávega SACIFI, Architecture and DevOps Manager</h2>
         <ul>
         <li>July 2018 – July 2019</li>
-        <li>Built and led the DevOps team from the ground up, establishing best practices for automation, deployment, and monitoring.</li>
+        <li>Built and led the DevOps team to deploy and monitor 50+ services</li>
         <li>Reduced deployment time and increased system resilience by implementing a Kubernetes-based infrastructure with CI/CD pipelines.</li>
-        <li>Improved platform observability and operational efficiency through enhanced monitoring and logging strategies.</li>
-        <li>Lowered AWS infrastructure costs through architectural optimizations and resource usage audits.</li>
-        <li>Boosted engineering team productivity by introducing collaborative tooling, streamlined workflows, and agile practices.</li>
+        <li>Lowered 25% AWS infrastructure costs through architectural optimizations and resource usage audits.</li>
         </ul>
         <h2>Frávega SACIFI, Software Architect</h2>
         <ul>
         <li>Dec 2016 – July 2018</li>
         <li>Architected and led the implementation of the Product Catalog and Price Management systems, critical for online retail operations.</li>
-        <li>Introduced a domain-driven microservices architecture.</li>
         <li>Fostered collaboration through multidisciplinary, co-located teams aligned with agile product delivery.</li>
-        <li>Key technologies: Scala, Golang, MongoDB, Kafka, JavaScript, React, Git</li>
         </ul>
         <h2>Medallia Inc, Senior Software Engineer</h2>
         <ul>
         <li>Oct 2012 – May 2016</li>
-        <li>Improved stability and availability of Unsolicited Feedback module</li>
-        <li>Improved product internal quality by increasing modularity, reducing dependencies, and upgrading technology</li>
-        <li>Incremented business value by new functionality</li>
-        <li>Key technologies: Java 7, Scala, PostgreSQL, Git</li>
-        </ul>
-        <h2>Previous experience, Software Engineer &amp; Software Quality related roles</h2>
-        <ul>
-        <li>June 1992 – Sept 2012</li>
-        </ul>
-        <h2>University, Grade and post-grade lecturer</h2>
-        <ul>
-        <li>Mar 1983 – Dec 2016</li>
-        <li>Software Engineering at Morón University</li>
-        <li>Software Engineering at CAECE University</li>
-        <li>Physics, Electronic Engineering, Computing Theory at Buenos Aires University</li>
+        <li>Improved Unsolicited Feedback module to process 1.5M+ locations per day</li>
+        <li>Improved product internal quality, and functionality</li>
         </ul>
         <h1>Education</h1>
         <h2>Morón University, BS in Information Systems</h2>
@@ -139,18 +105,10 @@
         <li>Dec 1998</li>
         <li>Morón, AR</li>
         </ul>
-        <h2>CoCrear Argentina, Diploma program in Ontological Coaching with Business Orientation Professional training program of Ontological Coaches.</h2>
-        <ul>
-        <li>Dec 2008</li>
-        <li>Buenos Aires, AR</li>
-        </ul>
         <h1>Skills</h1>
         <ul>
-        <li>Programming: Proficient with GO, Kotlin, TypeScript, Java; good understanding of Web, app development, and DevOps</li>
-        <li>Software Design and Architecture: Clean Code, Clean Architecture, DDD, OOD, Microservices, Event-Driven, Event Sourcing, CQRS</li>
-        <li>Infrastructure &amp; CI/CD: Kubernetes, Docker, AWS, GCP, Git, Prometheus, Grafana, Git</li>
-        <li>Databases &amp; messaging: PostgreSQL, MongoDB, Kafka, SQS, Redis ,RabbitMQ</li>
-        <li>Languages: English (upper), Spanish (native)</li>
+        <li>Programming Languages: Golang, Typescript, Kotlin, Scala, Java, Python</li>
+        <li>Other: SQL, MongoDB, Kubernetes, Docker, AWS, Git</li>
         </ul>
     </article>
 </body>
