--- a/index.html
+++ b/index.html
@@ -73,16 +73,13 @@
     <main>
         <h1>Carlos Alberto Fau</h1>
         <p>Currículum Vitae</p>
-        <img src="Carlos_Alberto_Fau_CV_1.png" alt="Vista previa del CV" class="preview" />
+        <img src="2510/Carlos_Alberto_Fau_CV_1.png" alt="Vista previa del CV" class="preview" />
         <div class="links">
-            <a href="Carlos_Alberto_Fau_CV.html" target="_blank">HTML Version</a>
-            <a href="Carlos_Alberto_Fau_CV.pdf" target="_blank">PDF Version</a>
+            <a href="2510/Carlos_Alberto_Fau_CV.pdf" target="_blank">PDF Version</a>
+            <a href="2510/Carlos_Alberto_Fau_CV.html" target="_blank">HTML Version</a>
             <a href="https://linkedin.com/in/cafau" target="_blank">Linded In</a>
         </div>
     </main>
-    <footer>
-        © Carlos Alberto Fau – Actualizado en septiembre 2025
-    </footer>
 </body>
 
 </html>
